// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Blockquote renders correctly 1`] = `
<figure
  class="text-left"
>
  <blockquote
    class="blockquote"
  >
    <p>
      A well-known quote, contained in a blockquote element.
    </p>
  </blockquote>
  <figcaption
    class="blockquote-footer"
  >
    Someone famous in    
    <cite
      title="Source title"
    >
      Source title
    </cite>
  </figcaption>
</figure>
`;

exports[`OE - Blockquote renders correctly with no attribution 1`] = `
<figure
  class="text-left"
>
  <blockquote
    class="blockquote"
  >
    <p>
      A well-known quote, contained in a blockquote element.
    </p>
  </blockquote>
</figure>
`;

exports[`OE - Blockquote renders correctly with no cite 1`] = `
<figure
  class="text-left"
>
  <blockquote
    class="blockquote"
  >
    <p>
      A well-known quote, contained in a blockquote element.
    </p>
  </blockquote>
  <figcaption
    class="blockquote-footer"
  >
    Someone famous in  
  </figcaption>
</figure>
`;

exports[`OE - Blockquote renders correctly with text aligned center 1`] = `
<figure
  class="text-center"
>
  <blockquote
    class="blockquote"
  >
    <p>
      A well-known quote, contained in a blockquote element.
    </p>
  </blockquote>
  <figcaption
    class="blockquote-footer"
  >
    Someone famous in    
    <cite
      title="Source title"
    >
      Source title
    </cite>
  </figcaption>
</figure>
`;
